<resources>
    <!-- Các string của nhánh nghia -->
    <string name="sys_manager">Quản lý hệ thống</string>
    <string name="user">Người dùng</string>
    <string name="category">Danh mục</string>
    <string name="featured">Nổi bật</string>
    <string name="censor">Kiểm duyệt</string>
    <string name="logout">Đăng xuất</string>
    <string name="admin">Admin</string>
    <string name="home">Trang chủ</string>
    <string name="search_user">Tìm kiếm người dùng...</string>
    <string name="active">Hoạt động</string>
    <string name="locked">Đã khóa</string>
    <string name="see_more">Xem thêm</string>
    <string name="add_new_catalog">Thêm mới danh mục</string>
    <string name="search_catalog">Tìm kiếm lĩnh vực, công nghệ...</string>
    <string name="catalog_tag">Danh mục / Thẻ</string>
    <string name="field">Lĩnh vực</string>
    <string name="technology">Công nghệ</string>
    <string name="search_prj_comment">Tìm kiếm dự án, bình luận</string>
    <string name="wait_censor">Nội dung chờ duyệt</string>
    <string name="search_featured">Tìm kiếm dự án nổi bật...</string>
    <string name="project_featured">Dự án nổi bật</string>
    <string name="add_project">Thêm dự án</string>
    <string name="view_more">Xem chi tiết ></string>
    <string name="save_record">Lưu thông tin</string>
    <string name="back_user_detail">Người dùng/Chi tiết</string>
    <string name="user_name1">Tên người dùng:</string>
    <string name="department">Khoa:</string>
    <string name="class_name">Lớp:</string>
    <string name="email">Email:</string>
    <string name="role">Vai trò:</string>
    <string name="status">Trạng thái:</string>
    <string name="status_2">Trạng thái</string>
    <string name="project_detail">Chi tiết dự án</string>
    <string name="short_description">Mô tả dự án</string>
    <string name="source_code">Mã nguồn</string>
    <string name="video">Video</string>
    <string name="member">Thành viên</string>
    <string name="comment">Bình luận</string>
    <string name="delete_project">Xóa dự án</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete_field">Xóa field</string>
    <string name="management">Quản lý</string>
    <string name="profile">Trang cá nhân</string>
    <string name="search_project">Tìm kiếm dự án</string>
    <string name="field_subject">Lĩnh vực/Chủ đề</string>
    <string name="make_featured">Làm nổi bật</string>
    <string name="in_progress">Đang thực hiện</string>
    <string name="finished">Đã hoàn thành</string>
    <string name="cancel">Hủy bỏ</string>
    <string name="apply">Áp dụng</string>
    <string name="clear_all">Bỏ chọn tất cả</string>
    <string name="full_name">Họ và tên:</string>
    <string name="title_dashboard">TLU Project Expo Dashboard</string>

    <!-- Các string của nhánh main -->
    <string name="app_name">TLUProjectExpo</string>
    <string name="no_projects_for_this_user">Người dùng này chưa có dự án nào.</string>
    <string name="error_loading_projects">Lỗi khi tải danh sách dự án.</string>
    <string name="no_notifications">Không có thông báo nào</string>
    <string name="user_avatar">Ảnh đại diện người dùng</string>
    <!--Notification-->
    <string name="more_options">Tùy chọn khác</string>
    <string name="mark_as_read">Đánh dấu đã đọc</string>
    <string name="mark_as_unread">Đánh dấu chưa đọc</string>
    <string name="notification_default_title">Thông báo</string>
    <string name="status_accepted">Đã chấp nhận</string>
    <string name="status_declined">Đã từ chối</string>
    <string name="error_updating_notification">Lỗi khi cập nhật thông báo.</string>
    <string name="notification_marked_as_read">Đã đánh dấu là đã đọc.</string>
    <string name="notification_marked_as_unread">Đã đánh dấu là chưa đọc.</string>
    <string name="error_loading_notifications">Lỗi tải thông báo</string>
    <string name="delete_notification">Xóa thông báo</string> <!-- Tiêu đề cho AlertDialog và menu item -->
    <string name="notification_deleted">Đã xóa thông báo.</string>
    <string name="error_deleting_notification">Lỗi khi xóa thông báo.</string>
    <string name="confirm_delete_notification">Bạn có chắc chắn muốn xóa thông báo này không?</string>
    <string name="delete">Xóa</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="confirm_reset_password">Chúng tôi sẽ gửi đường dẫn thay đổi mật khẩu về email của bạn, bấm xác nhận để nhận tin nhắn email.</string>
    <string name="change_password">Đổi mật khẩu</string>
    <string name="reset_password">Xác nhận đổi mật khẩu</string>




</resources>
