<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--    Title-->
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sys_manager"
        android:textSize="24sp"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginTop="10dp"/>

    <!--    Navigation Bar for User Administration Page-->
    <LinearLayout
        android:id="@+id/navigation_bar_sys_censor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="8dp"
        android:paddingHorizontal="4dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/back_from_censor"
            android:layout_width="48dp"
            android:layout_height="48dp"
            app:srcCompat="@drawable/ic_arrow_back_left"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:scaleType="fitXY"
            />

        <TextView
            android:textColor="#1D1B20"
            android:textSize="22sp"
            android:layout_marginBottom="1dp"
            android:layout_marginEnd="4dp"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/back_user_detail"
            />
    </LinearLayout>
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/avatar"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:padding="4dp"
        android:layout_marginEnd="20dp"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Full"
        android:src="@drawable/image7"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toBottomOf="@+id/navigation_bar_sys_censor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!--Section user name-->
    <TextView
        android:id="@+id/user_name1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name1"
        android:textSize="18sp"
        android:layout_marginStart="18dp"
        app:layout_constraintTop_toBottomOf="@+id/avatar"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/user_name2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:paddingStart="10dp"
        android:paddingVertical="10dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/border_square_light"
        tools:text="Trần Thu Nguyệt"
        android:textSize="16sp"
        android:textColor="#808080"
        app:layout_constraintTop_toBottomOf="@+id/user_name1"
        app:layout_constraintStart_toStartOf="parent"/>

    <!--Section Class-->
    <TextView
        android:id="@+id/class_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/class_name"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_name2" />

    <TextView
        android:id="@+id/class_name2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:paddingStart="10dp"
        android:paddingVertical="10dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/border_square_light"
        tools:text="63CNTT2"
        android:textSize="16sp"
        android:textColor="#808080"
        app:layout_constraintTop_toBottomOf="@+id/class_name"
        app:layout_constraintStart_toStartOf="parent"/>

    <!--Section Email-->
    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/email"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/class_name2" />

    <TextView
        android:id="@+id/email2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:paddingStart="10dp"
        android:paddingVertical="10dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/border_square_light"
        tools:text="nguyenxinhgai@gmail.com"
        android:textSize="16sp"
        android:textColor="#808080"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintStart_toStartOf="parent"/>

    <!--Section Role-->
    <TextView
        android:id="@+id/role"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/role"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email2" />

    <Spinner
        android:id="@+id/role_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:paddingStart="10dp"
        android:paddingVertical="10dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/rounded_border_background"
        tools:text="nguyenxinhgai@gmail.com"
        android:textSize="16sp"
        android:textColor="#808080"
        app:layout_constraintTop_toBottomOf="@+id/role"
        app:layout_constraintStart_toStartOf="parent"/>

    <!--Section Status-->
    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/status"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/role_input" />

    <Spinner
        android:id="@+id/status_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:paddingStart="10dp"
        android:paddingVertical="10dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/rounded_border_background"
        tools:text="nguyenxinhgai@gmail.com"
        android:textSize="16sp"
        android:textColor="#808080"
        app:layout_constraintTop_toBottomOf="@+id/status"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/btn_save_infor"
        android:text="@string/save_record"
        android:layout_width="380dp"
        android:layout_height="40dp"
        android:background="@drawable/button_see_more"
        app:backgroundTint="@null"
        android:layout_marginTop="61dp"
        android:layout_marginBottom="16dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>


