<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--    Title-->
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sys_manager"
        android:textSize="24sp"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginTop="10dp"/>

    <!--    Navigation Bar for User Administration Page-->
    <LinearLayout
        android:id="@+id/navigation_bar_sys_censor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="8dp"
        android:paddingHorizontal="4dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/back_from_censor"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:layout_marginEnd="4dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/ic_arrow_back_left"
            android:clickable="true"
            android:focusable="true"/>

        <TextView
            android:textColor="#1D1B20"
            android:textSize="22sp"
            android:layout_marginBottom="1dp"
            android:layout_marginEnd="4dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/featured"
            />
    </LinearLayout>

    <!--    Search User Dashboard-->
    <LinearLayout
        android:id="@+id/search_censor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:paddingHorizontal="16dp"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="3dp"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/navigation_bar_sys_censor"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/rounded_border_background_light">
        <EditText
            android:id="@+id/edt_search_featured"
            android:textColor="#B3B3B3"
            android:textSize="16sp"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="9"
            android:hint="@string/search_featured"
            />
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/btn_icon_search_censor"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/ic_search"
            android:tint="@color/light_gray"
            android:scaleType="fitXY"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/notice_featured"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/search_censor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:text="@string/project_featured"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/search_catalog_sys"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_weight="6"
            />
        <Button
            android:id="@+id/btn_add_featured"
            android:text="@string/add_project"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/button_see_more"
            app:backgroundTint="@null"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </LinearLayout>

    <!--Item need to censor-->
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/notice_featured"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp">


    </androidx.recyclerview.widget.RecyclerView>
    <Button
        android:id="@+id/btn_see_more"
        android:text="@string/see_more"
        android:layout_width="380dp"
        android:layout_height="40dp"
        android:background="@drawable/button_see_more"
        app:backgroundTint="@null"
        android:layout_marginTop="61dp"
        android:layout_marginBottom="16dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>


