<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.CatalogManagementPage">

        <TextView
            android:id="@+id/title"
            android:textColor="#000000"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/sys_manager"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    <!-- Navigation bar -->
    <LinearLayout
        android:id="@+id/nav_catalog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingVertical="8dp"
        android:paddingHorizontal="4dp"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/title">
        <ImageButton
            android:id="@+id/back_from_catalog"
            android:layout_width="48dp"
            android:layout_height="48dp"
            app:srcCompat="@drawable/ic_arrow_back_left"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:scaleType="fitXY"
            />
        <TextView
            android:textColor="#1D1B20"
            android:textSize="22sp"
            android:layout_marginBottom="1dp"
            android:layout_marginEnd="78dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/category"
            />

        <Button
            android:id="@+id/add_new_catalog"
            android:textColor="#FDE8E7"
            android:textSize="14sp"
            android:layout_marginHorizontal="12dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:background="@drawable/button_see_more"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:insetLeft="0dp"
            android:insetRight="0dp"
            app:backgroundTint="@null"
            android:text="@string/add_new_catalog" />
    </LinearLayout>

    <!-- Search bar -->
    <LinearLayout
        android:id="@+id/search_catalog_sys"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:paddingHorizontal="16dp"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="3dp"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/nav_catalog"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/rounded_border_background_light">
        <EditText
            android:id="@+id/edt_search_user_dashboard"
            android:textColor="#B3B3B3"
            android:textSize="16sp"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="9"
            android:hint="@string/search_catalog"
            />
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/btn_icon_search_user_dashboard"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/ic_search"
            android:tint="@color/light_gray"
            android:scaleType="fitXY"
            />
    </LinearLayout>

    <!-- TextView Tag -->
    <TextView
        android:id="@+id/notice_catalog"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="43dp"
        android:layout_marginStart="10dp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/catalog_tag"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/search_catalog_sys"
        app:layout_constraintStart_toStartOf="parent"
        />

    <!-- RecyclerView for fields and technologies -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/notice_catalog"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_see_more_catalog">

        <!-- LinearLayout to hold RecyclerViews for fields and technologies -->
        <LinearLayout
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="10dp">

            <!-- Lĩnh vực -->
            <TextView
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginStart="9dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/field"
                />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="9dp"
                android:clipToPadding="false"
                android:scrollbars="vertical"
                android:nestedScrollingEnabled="false"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <!-- Công nghệ -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="9dp"
                android:text="@string/technology"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_technology"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="9dp"
                android:clipToPadding="false"
                android:scrollbars="vertical"
                android:nestedScrollingEnabled="false"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <!-- Button xem thêm danh mục -->
    <Button
        android:id="@+id/btn_see_more_catalog"
        android:text="@string/see_more"
        android:layout_width="380dp"
        android:layout_height="40dp"
        android:background="@drawable/button_see_more"
        app:backgroundTint="@null"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

<!--    <ProgressBar-->
<!--        android:id="@+id/progress_bar_loading"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:visibility="gone"-->
<!--        tools:visibility="visible"-->

<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent" />-->

    <!-- Button xóa fields -->
    <!--<Button
        android:id="@+id/btn_delete_fields"
        android:text="@string/delete_field"
        android:layout_width="380dp"
        android:layout_height="40dp"
        android:background="@drawable/button_see_more"
        app:backgroundTint="@null"
        android:layout_marginTop="61dp"
        android:layout_marginBottom="16dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btn_see_more_dashboard"/>-->
</androidx.constraintlayout.widget.ConstraintLayout>
